--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -19,6 +19,11 @@
     background-color: white;
     border-radius: 20px;
     display: inline-flex;
+    transition: 0.3s;
+}
+
+.category:hover {
+    background-color: #f5f5f5;
 }
 
 .category p {
