--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -4,6 +4,9 @@
     transition: 0.3s;
     padding-top: 85px;
     padding-bottom: 185px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .categories {
@@ -21,12 +24,20 @@
     color: #5a453b;
 }
 
+.category.active {
+    color: rgba(79, 226, 74, 1);
+}
+
 .cards {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
-    justify-content: center;
+    /* justify-content: center; */
     margin-bottom: 80px;
+    justify-items: center;
+    grid-column-gap: 30px;
 }
 
 .loadMoreBtn {
@@ -47,7 +58,8 @@
 }
 
 .loadMoreBtn:hover {
-    color: #481a01;
+    color: #391400;
+    background-color: #f5f5f5;
 }
 
 .loadMoreBtn p {
@@ -57,4 +69,11 @@
 .loadMoreBtnBlock {
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 1170px) {
+    .cards {
+        grid-template-columns: 1fr 1fr;
+        max-width: 750px;
+    }
 }
