--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,4 +1,36 @@
 .container {
-    max-width: 1170px;
+    max-width: 1600px;
     margin: 0 auto;
+    position: relative;
+}
+
+@media (max-width: 1600px) {
+    .container {
+        max-width: 1450px;
+    }
+}
+
+
+@media (max-width: 1400px) {
+    .container {
+        max-width: 1200px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .container {
+        max-width: 992px;
+    }
+}
+
+@media (max-width: 992px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 95%;
+    }
 }
