--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,8 @@ ul {
     list-style: none;
 }
 
-a, a:hover {
+a,
+a:hover {
     color: white;
     text-decoration: none;
 }
@@ -61,8 +62,27 @@ a, a:hover {
 
 .desc {
     text-align: center;
-    width: 570px;
+    max-width: 570px;
     color: #b1b2b9;
     font-size: 16px;
     line-height: 32px;
+    padding: 0 15px;
+}
+
+@media (max-width: 1040px) {
+    .nav {
+        display: none;
+    }
+
+    .btn {
+        display: none;
+    }
+
+    .headerTop {
+        justify-content: center;
+    }
+
+    .title {
+        font-size: 56px;
+    }
 }
